<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="48dp"
    tools:context="com.university.project.agendat2.ui.activity.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/login"
        android:textSize="@dimen/login_textSize"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:hint="@string/username"
        android:inputType="text"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btn_login"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.8"
        android:text="@string/ingresar" />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/registrate"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorSignupLink"/>

</LinearLayout>